--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "coding-platform",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start:back-end": "npm run dev --prefix Back-end",
+    "start:front-end": "npm run start --prefix Front-end",
+    "start:all": "concurrently \"npm run start:back-end\" \"npm run start:front-end\"",
+    "install:all": "npm install --prefix Back-end && npm install --prefix Front-end",
+    "generate:client": "openapi-generator-cli generate -i Back-end/docs/openapi.yaml -g typescript-axios -o Front-end/src/api",
+    "generate:server": "openapi-generator-cli generate -i Back-end/docs/openapi.yaml -g nodejs-express-server -o Back-end/generated-server"
+  },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.16.2"
+    "@openapitools/openapi-generator-cli": "^2.16.2",
+    "concurrently": "^7.6.0"
   }
 }
